--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url('public/fondo_burger.png');
+  background-image: url('public/images/fondo_burger.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
