--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -2,7 +2,7 @@
 .container {
   width: 100vw;
   height: 100vh;
-  background-image: url("public/fondo_burger.png"); /* Ruta relativa desde /public */
+  background-image: url("public/images/fondo_burger.png"); /* Ruta relativa desde /public */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
