--- a/src/styles/RegisterForm.module.css
+++ b/src/styles/RegisterForm.module.css
@@ -67,3 +67,12 @@
 .homeIcon:hover {
   transform: scale(1.2);
 }
+
+.error {
+  background-color: #ffe5e5;
+  color: #a60000;
+  padding: 0.75rem;
+  border-radius: 0.5rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
