--- a/src/styles/pages-styles/Home.module.css
+++ b/src/styles/pages-styles/Home.module.css
@@ -18,7 +18,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.4); /* Oscurece el fondo */
+  background-color: rgba(0, 0, 0, 0.4);
   z-index: 0;
 }
 
