--- a/src/styles/RegisterForm.module.css
+++ b/src/styles/RegisterForm.module.css
@@ -1,12 +1,12 @@
 .container {
-  background-color: rgba(255, 255, 255, 0.95);
+  background-color: rgba(255, 255, 255, 0.75);
   padding: 2rem;
   border-radius: 1rem;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   width: 100%;
   max-width: 400px;
-  position: relative;
   z-index: 1;
+  position: relative;
 }
 
 .title {
@@ -20,26 +20,24 @@
   width: 93%;
   padding: 0.75rem;
   margin-bottom: 1rem;
-  border: 1px solid #ccc;
+  border: 1px solid lab(66.67% 14.31 42.71);
   border-radius: 0.5rem;
   font-size: 1rem;
 }
 
 .button {
-  display: block;
-  margin: 0 auto;
-  background-color: #5d2c02;
-  color: white;
-  padding: 0.6rem 1.5rem;
-  font-size: 1rem;
+  width: 100%;
+  background-color: #f5a623;
   border: none;
-  border-radius: 0.5rem;
+  border-radius: 0.75rem;
+  padding: 0.75rem 2rem;
+  color: white;
+  font-weight: bold;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.2s;
 }
-
 .button:hover {
-  background-color: #3e1e00;
+  background-color: #d48806;
 }
 
 .link {
